[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LevelInstructions.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/Chiptune_Adventures_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/LevelTemplate.gd" type="Script" id=5]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Goodies.gd" type="Script" id=8]
[ext_resource path="res://sfx/powerUp4.ogg" type="AudioStream" id=9]
[ext_resource path="res://scenes/WinCondition.gd" type="Script" id=10]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 5 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 672, 416 )

[node name="Goodies" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Blocks" type="Node" parent="."]

[node name="WinCondition" type="Node" parent="."]
script = ExtResource( 10 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
anchor_top = 1.0
margin_left = 608.0
margin_top = 840.0
margin_right = 608.0
margin_bottom = 840.0

[node name="LevelInstructions" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="ComboSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 2.0

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_NextLevelTimer_timeout"]
